--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
   carousel_slider: ^5.0.0
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/scenarios/
-  #  - assets/data/logs/
+    - assets/data/
   #    - images/a_dot_burr.jpeg
   #    - images/a_dot_ham.jpeg
 
