--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.5
   carousel_slider: ^5.0.0
   lucide_icons: ^0.257.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
