--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^5.0.0
   lucide_icons: ^0.257.0
   audioplayers: ^6.5.1
+  flutter_highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
